2003-03-24  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/10119
	* error.c (dump_expr) [BASELINK]: Use dump_expr.
	* pt.c (maybe_fold_nontype_args): New function.
	(tsubst_copy) [SCOPE_REF]: Subst any template_id args.
	[TEMPLATE_ID_EXPR]: Break out folding code, call it.
	(tsubst_copy_and_build) [TEMPLATE_ID_EXPR]: Call
	maybe_fold_nontype_args.

2003-03-24  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/10026
	* decl2.c (arg_assoc_type) [ERROR_MARK]: Don't die.

2003-03-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/7086
	* typeck.c (cxx_mark_addressable):  Adjust call to
	gen_mem_addressof or put_var_into_stack.

2003-03-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/9978, c++/9708
	* cp-tree.h (instantiate_template): Add tsubst_flags parameter.
	* call.c (add_template_candidate_real): Adjust
	instantiate_template call.
	* class.c (resolve_address_of_overloaded_function): Likewise.
	* decl.c (build_enumerator): Set TREE_CONSTANT.
	* pt.c (check_instantiated_args): New.
	(push_inline_template_parms_recursive): Set TREE_CONSTANT,
	TREE_READONLY.
	(build_template_parm_index): Copy TREE_CONSTANT, TREE_READONLY.
	(reduce_template_parm_level): Likewise.
	(process_template_parm): Likewise.
	(check_explicit_specialization): Adjust instantiate_template call.
	(convert_template_argument): Don't check non-type argument here.
	(lookup_template_class): Check them here.
	(tsubst_friend_function): Adjust instantiate_template call.
	(instantiate_template): Add tsubst_flags parameter, use it. Check
	instantiated args.

2003-03-21  Zack Weinberg  <zack@codesourcery.com>

	* decl.c: Update calls to shadow_warning.

2003-03-21  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/9898
	* error.c (dump_decl) [CONST_DECL]: Print '<enumerator>'.
	(dump_expr) [CONSTRUCTOR]: Print default ctor as a function call.

2003-03-20  Mark Mitchell  <mark@codesourcery.com>

	* cp/decl2.c (arg_assoc_class): Correct check for namespace-scope
	friends.