@@ -1,5 +1,8 @@
 2003-03-24  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/9898, c++/383
+	* g++.dg/template/conv6.C: New test.
+	
 	PR c++/10119
 	* g++.dg/template/ptrmem5.C: New test.
 
